Silence some spurious warnings from g++

See https://gcc.gnu.org/bugzilla/show_bug.cgi?id=93557 for details.